# StockManager_C_Project

./: .gitignore  CMakeLists.txt  README.md
include/: list.h  menu.h  product.h
src/: list.c  main.c  menu.c  product.c
